feat: Implementa Dashboard, Ranking e Perfil do Usuário
Resume as seguintes funcionalidades e melhorias:
- Criação e estruturação inicial da tela de Dashboard/Ranking.
- Implementação de lógica para ordenação de jogadores por pontos.
- Atribuição personalizada de medalhas (Ouro, Prata, Diamante) aos jogadores do ranking com base em seus nomes (SkittleBerry, BrayanAlexBr, AdilsonDark14, JeffreyUch23).
- Ajustes no layout do cabeçalho da Dashboard para posicionar avatar, nome e medalha (PUzumaki21) conforme o design desejado.
- Inclusão da tela de Perfil do Usuário com informações (Level, XP, Histórico de Missões).
- Substituição do ícone genérico de diamante pela imagem 'prata.png' no perfil do usuário (PUzumaki21).
- Adição de botões de Facebook e Logout na tela de Perfil.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
   assets:
     - assets/images/logo.png
     - assets/images/cat.png 
@@ -30,3 +29,8 @@ flutter:
     - assets/images/avatar2.png
     - assets/images/avatar3.png
     - assets/images/avatar4.png
+    - assets/images/google.png
+    - assets/images/prata.png
+    - assets/images/ouro.png
+    - assets/images/diamant.png
+
